# libconfigpp

./: .gitignore  Makefile.am  README.md  configure.ac  libconfigpp.h
include/: Makefile.am  libconfigpp.h
tests/: Makefile.am  simple_config.cfg  simple_test.cpp  test_runner.cpp
