#
# include/Makefile.am
#
# Copyright (C) 2013 by
# Roman Mohr - <roman@fenkhuber.at>
# This file is part of libconfigpp.
#
# libconfigpp is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Lesser License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# libconfigpp is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Lesser License for more details.
#
# You should have received a copy of the GNU General Lesser License
# along with libconfigpp.  If not, see <http://www.gnu.org/licenses/>.

nobase_include_HEADERS = libconfigpp.h
